syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcServiceDemo";

package product;

service Product{
	rpc SaveProcuct(ProductModel) returns (ProductSaveResponse);
	rpc GetProducts(google.protobuf.Empty) returns(ProductList);
}

message ProductList{
	repeated ProductModel Products=1;
}

message ProductModel {
	string ProductName = 1;
	string ProductCode = 2;
	double Price = 3;
	string brand = 4;
	google.protobuf.Timestamp StockDate=5;
}

message ProductSaveResponse {
	int32 StatusCode = 1;
	bool IsSuccess=2;
}
