syntax = "proto3";

option csharp_namespace = "GrpcServiceDemo";

package sample;

service Sample{
	rpc GetFullName(SampleRequest) returns (SampleResponse);
}

message SampleRequest {
	string firstname = 1;
	string lastname = 2;
}

message SampleResponse {
	string fullname = 1;
}
